--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import "./scss/fonts";
+@import "./scss/libs/vars";
 @import "./scss/libs/set";
 @import "./scss/components/header";
-@import "./scss/pages/home";
+@import "./scss/pages/main";
 @import "./scss/style";
