--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,11 @@
 @import "./scss/fonts";
 @import "./scss/libs/vars";
 @import "./scss/libs/set";
+@import "./scss/libs/ui";
+
 @import "./scss/components/header";
+@import "./scss/components/footer";
+@import "./scss/components/form";
+
 @import "./scss/pages/main";
 @import "./scss/style";
