--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,3 +1,15 @@
-<header>
-	<h2>example text from header</h2>
+<header class="header">
+	<div class="header__container container">
+		<div class="header__inner">
+			<div class="header__logo">
+				<a href="./main.html"><img src="./assets/images/logo-white.svg" alt=""></a>
+			</div>
+			<nav class="header__nav nav">
+				<a class="nav__link" href="#">about us</a>
+				<a class="nav__link" href="#">projects</a>
+				<a class="nav__link" href="#">contacts</a>
+			</nav>
+			<button class="header__btn" type="button">request a project</button>
+		</div>
+	</div>
 </header>
