--- a/src/scss/pages/_main.scss
+++ b/src/scss/pages/_main.scss
@@ -109,7 +109,7 @@
 		&-content {
 			width: 81.7rem;
 			position: absolute;
-			left: 5rem;
+			left: 4.6rem;
 			top: 9.8rem;
 			z-index: 4;
 		}
@@ -118,7 +118,7 @@
 			display: flex;
 			flex-direction: column;
 			width: 70.5rem;
-			margin-bottom: 5.1rem;
+			margin-bottom: 5rem;
 			// .main-solutions__wrapper-title--top
 			&--top {
 				align-self: flex-end;
@@ -146,7 +146,7 @@
 			strong {
 				display: block;
 				font-weight: 300;
-				margin-bottom: 4.8rem;
+				margin-bottom: 3rem;
 			}
 		}
 		// .main-solutions__wrapper-btn
@@ -173,26 +173,7 @@
 		width: 100%;
 		height: 100%;
 
-		border-radius: 50%;
-		background: linear-gradient(0deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.2) 100%),
-			linear-gradient(
-				107deg,
-				#b0913a -107.13%,
-				#aa8d3a -91.71%,
-				#9a8139 -71.78%,
-				#8c7638 -58.96%,
-				#a68a39 -34.1%,
-				#b0913a -23.45%,
-				#b49641 -5.83%,
-				#c0a456 5.35%,
-				#dfc884 32.59%,
-				#dcc481 51.4%,
-				#d5bd79 58.9%,
-				#c5aa5d 65.65%,
-				#b99c4a 73.04%,
-				#b2943e 85.87%,
-				#b0913a 99.02%
-			);
+		border-radius: 49%;
 		&::after {
 			content: "";
 			width: 26.1rem;
@@ -226,6 +207,36 @@
 			right: -10rem;
 			top: 0;
 			z-index: 3;
+		}
+		&--bg {
+			overflow: hidden;
+			position: absolute;
+			z-index: -1;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			border-radius: 50%;
+
+			background: linear-gradient(0deg, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.2) 100%),
+				linear-gradient(
+					107deg,
+					#b0913a -107.13%,
+					#aa8d3a -91.71%,
+					#9a8139 -71.78%,
+					#8c7638 -58.96%,
+					#a68a39 -34.1%,
+					#b0913a -23.45%,
+					#b49641 -5.83%,
+					#c0a456 5.35%,
+					#dfc884 32.59%,
+					#dcc481 51.4%,
+					#d5bd79 58.9%,
+					#c5aa5d 65.65%,
+					#b99c4a 73.04%,
+					#b2943e 85.87%,
+					#b0913a 99.02%
+				);
 		}
 	}
 	// .main-solutions__btn
