--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -31,7 +31,7 @@
 	font-size: 2rem;
 	font-style: normal;
 	font-weight: 400;
-	line-height: 110%; /* 22px */
+	line-height: 1; /* 22px */
 	text-transform: uppercase;
 
 	display: flex;
