--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -40,12 +40,17 @@
 	font-weight: 300;
 	line-height: normal; /* 25.2px */
 	text-transform: uppercase;
-
 	&::placeholder {
 		color: $grayText;
+		transition: opacity 0.2s linear;
+	}
+	&:focus::placeholder {
+		transition: opacity 0.2s linear;
+		opacity: 0;
 	}
 }
 .input-file {
+	display: none;
 	appearance: none;
 	opacity: 0;
 	visibility: hidden;
@@ -106,7 +111,7 @@
 	.input {
 		display: block;
 		width: 100%;
-		padding-bottom: 2.8rem;
+		padding-bottom: 2.4rem;
 		border-bottom: 0.2rem solid rgba(114, 114, 114, 0.15);
 
 		font-size: 3rem;
