main page ready

--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -165,8 +165,10 @@
 
 .page {
 	will-change: transform;
-	overflow: hidden;
+	overflow: visible;
+	position: relative;
 }
+
 .content {
 	will-change: transform;
 }
