--- a/src/components/header.html
+++ b/src/components/header.html
@@ -2,7 +2,8 @@
 	<div class="header__container container">
 		<div class="header__inner">
 			<div class="header__logo">
-				<a href="./main.html"><img src="./assets/images/logo-white.svg" alt=""></a>
+				<a class="white-logo" href="./main.html"><img src="./assets/images/logo-white.svg" alt=""></a>
+				<a class="black-logo" href="./main.html"><img src="./assets/images/logo-black.svg" alt=""></a>
 			</div>
 			<nav class="header__nav nav">
 				<a class="nav__link" href="#">about us</a>
