--- a/src/scss/pages/_main.scss
+++ b/src/scss/pages/_main.scss
@@ -290,6 +290,7 @@
 		gap: 1.6rem;
 		text-transform: uppercase;
 		a {
+			color: $black;
 			&:hover {
 				text-decoration: underline;
 			}
@@ -596,7 +597,7 @@
 		&:hover {
 			img {
 				transition: transform 0.5s ease-in-out;
-				transform: scale(1.2);
+				transform: scale(1.1);
 			}
 		}
 	}
