--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -331,4 +331,14 @@ main {
 	main {
 		padding-top: 14.4rem;
 	}
+
+	.error-text {
+		font-size: 2.4rem;
+		line-height: 140%; /* 16.8px */
+
+		position: absolute;
+		bottom: -3.8rem;
+		left: 0;
+		z-index: 1;
+	}
 }
