--- a/src/scss/pages/_main.scss
+++ b/src/scss/pages/_main.scss
@@ -630,7 +630,7 @@
 	.main-banner {
 		// .main-banner__inner
 		&__inner {
-			height: 160rem;
+			height: 142.4rem;
 		}
 		// .main-banner__btn
 		&__btn {
@@ -644,10 +644,15 @@
 	.main-solutions {
 		// .main-solutions__inner
 		&__inner {
+			position: relative;
+			left: -3.2rem;
+			width: 100vw;
+			overflow: hidden;
+			padding: 0 3.2rem;
 			flex-direction: column;
 			align-items: flex-start;
 			justify-content: flex-start;
-			gap: 6.4rem;
+			gap: 7.8rem;
 		}
 		// .main-solutions__subtitle
 		&__subtitle {
@@ -657,40 +662,42 @@
 		&__wrapper {
 			position: relative;
 			width: 100%;
-			height: 142.4rem;
+			height: 124.8rem;
 			margin: 0;
 			// .main-solutions__wrapper-content
 			&-content {
 				width: 100%;
 				position: absolute;
 				left: 0;
-				top: 21.8rem;
+				top: 26.8rem;
 				z-index: 4;
 			}
 			// .main-solutions__wrapper-title
 			&-title {
-				text-align: right;
+				&.h1 {
+					font-size: 9.2rem;
+				}
+				text-align: left;
 				display: flex;
 				flex-direction: column;
 				width: 100%;
-				margin-bottom: 9.6rem;
+				margin-bottom: 5rem;
 				// .main-solutions__wrapper-title--top
 				&--top {
-					align-self: flex-end;
-					margin-right: 2.4rem;
+					align-self: flex-start;
+					margin-right: 0;
 				}
 				// .main-solutions__wrapper-title--bottom
 				&--bottom {
 					margin-left: 0;
-					margin-right: 2.4rem;
 				}
 			}
 			// .main-solutions__wrapper-description
-			&-description {
+			&-description.text-24 {
+				font-size: 3rem;
 				text-transform: uppercase;
-				margin-bottom: 3.2rem;
-				margin-left: auto;
-				width: 48.8rem;
+				margin-bottom: 3.5rem;
+				width: 100%;
 			}
 			// .main-solutions__wrapper-text
 			&-text {
@@ -698,12 +705,13 @@
 				margin-left: 0;
 
 				strong {
-					margin-bottom: 9.6rem;
+					font-size: 3rem;
+					margin-bottom: 9rem;
 				}
 			}
 			// .main-solutions__wrapper-btn
 			&-btn {
-				margin-left: 19.5rem;
+				margin-left: 0;
 				span {
 					box-shadow: inset 0 0 0 0.4rem $brown;
 				}
@@ -713,28 +721,28 @@
 		&__main-back {
 			position: absolute;
 			top: 0;
-			left: -52rem;
+			left: -68rem;
 			z-index: 1;
+			transform-origin: center;
+			will-change: transform;
 
-			width: 142.4rem;
-			height: 142.4rem;
+			width: 124.8rem;
+			height: 124.8rem;
 
 			&::after {
 				content: "";
-				width: 46.4rem;
-				height: 46.4rem;
+				width: 40.8rem;
+				height: 40.8rem;
 			}
 
 			&--circle {
-				width: 91.4rem;
-				height: 91.4rem;
-				box-shadow: inset 0 0 0 22.6rem $white;
+				width: 80rem;
+				height: 80rem;
+				box-shadow: inset 0 0 0 20rem $white;
 			}
 
 			&--overlay {
-				width: 71.2rem;
-				height: 142.4rem;
-				right: 0;
+				display: none;
 			}
 			&--bg {
 				overflow: hidden;
@@ -979,34 +987,34 @@
 		// .main-projects__subtitle
 		&__subtitle {
 			width: 100%;
+			margin-bottom: 6.4rem;
 		}
 		// .main-projects__content
 		&__content {
 			width: 100%;
 			margin: 0;
 			justify-content: space-between;
-			gap: 2rem;
-			margin-top: -3.6rem;
+			flex-direction: column;
+			gap: 4rem;
 		}
 		// .main-projects__content-wrapper
 		&__content-left {
-			width: 33.2rem;
+			width: 100%;
 			gap: 4rem;
-			margin-top: 10rem;
 		}
 
 		&__content-right {
-			width: 33.2rem;
+			width: 100%;
 			gap: 4rem;
 			margin-top: 0;
 		}
 		// .main-projects__content-item
 		&__content-item {
-			height: 33.2rem;
+			height: 33.4rem;
 		}
 		// .main-projects__content-item--null
 		&__content-item--null {
-			height: 6rem;
+			height: auto;
 
 			&.desktop {
 				display: none;
@@ -1014,8 +1022,9 @@
 			&.mobile {
 				display: flex;
 				flex-direction: column;
-				justify-content: flex-end;
-				align-items: flex-end;
+				justify-content: flex-start;
+				align-items: flex-start;
+				margin-top: 2.4rem;
 			}
 		}
 		// .main-projects__content-item--btn
