--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -7,6 +7,7 @@
 	transition:
 		background 0.5s linear,
 		padding 0.5s linear;
+	will-change: backdrop-filter;
 	&.scroll {
 		transition:
 			background 0.5s linear,
