--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@
 @import "./scss/components/form";
 
 @import "./scss/pages/main";
+@import "./scss/pages/project-detail";
 @import "./scss/style";
 
 .mobile {
