--- a/src/scss/pages/_project-detail.scss
+++ b/src/scss/pages/_project-detail.scss
@@ -86,6 +86,99 @@
 		}
 	}
 }
+.project-content {
+	// .project-content__inner
+	&__inner {
+		display: grid;
+		grid-template-columns: repeat(4, 41.5rem);
+		gap: 2rem;
+	}
+	// .project-content__item
+	&__item {
+		cursor: pointer;
+		width: 85rem;
+		height: 85rem;
+		grid-column: span 2;
+		grid-row: span 2;
+
+		position: relative;
+		overflow: hidden;
+		will-change: transform;
+		&:hover {
+			.project-content__item-btn {
+				opacity: 1;
+				transition: opacity 0.3s linear;
+			}
+		}
+		&.small {
+			width: 41.5rem;
+			height: 41.5rem;
+
+			&--bl {
+				grid-row: 2 / 3;
+				grid-column: 3 / 4;
+			}
+
+			&--tr {
+				grid-row: 4 / 5;
+				grid-column: 2 / 3;
+			}
+
+			&--bottom {
+				grid-row: 5 / 6;
+			}
+		}
+
+		img {
+			position: relative;
+			z-index: 2;
+		}
+
+		video {
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: 1;
+
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+	// .project-content__item-btn
+	&__item-content {
+		cursor: pointer;
+
+		position: relative;
+		width: 100%;
+		height: 100%;
+	}
+	// .project-content__item-btn
+	&__item-btn {
+		opacity: 0;
+		transition: opacity 0.3s linear;
+		position: absolute;
+		right: 4rem;
+		bottom: 4rem;
+		z-index: 5;
+
+		width: 6rem;
+		height: 6rem;
+		border-radius: 50%;
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		background: rgba(255, 255, 255, 0.2);
+		backdrop-filter: blur(0.48rem);
+
+		svg {
+			width: 2.4rem;
+			height: 2.4rem;
+		}
+	}
+}
 
 @media (max-width: 48em) {
 	.project-banner {
