--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 @import "./scss/libs/vars";
 @import "./scss/libs/set";
 @import "./scss/libs/ui";
+@import "./scss/libs/fancybox-custom";
 
 @import "./scss/components/header";
 @import "./scss/components/footer";
