--- a/src/scss/pages/_project-detail.scss
+++ b/src/scss/pages/_project-detail.scss
@@ -130,6 +130,7 @@
 		}
 
 		img {
+			will-change: object-position;
 			position: relative;
 			z-index: 2;
 		}
@@ -155,6 +156,7 @@
 	}
 	// .project-content__item-btn
 	&__item-btn {
+		will-change: backdrop-filter;
 		opacity: 0;
 		transition: opacity 0.3s linear;
 		position: absolute;
@@ -176,6 +178,74 @@
 		svg {
 			width: 2.4rem;
 			height: 2.4rem;
+		}
+	}
+}
+
+.project-video {
+	// .project-video__inner
+	&__inner {
+		width: 100%;
+		height: 108rem;
+		position: relative;
+	}
+	// .project-video__content
+	&__content {
+		cursor: pointer;
+		position: relative;
+		width: 100%;
+		height: 100%;
+
+		&::after {
+			content: "";
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: 1;
+			background: linear-gradient(0deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%);
+		}
+	}
+	// .project-video__button
+	&__button {
+		cursor: pointer;
+		position: absolute;
+		left: 10rem;
+		bottom: 10rem;
+		z-index: 2;
+
+		width: 14.3rem;
+		height: 16.4rem;
+	}
+	// .project-video__button-play
+	&__button-play {
+		display: none;
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 1;
+
+		width: 14.3rem;
+		height: 16.4rem;
+
+		&.active {
+			display: block;
+		}
+	}
+	// .project-video__button-pause
+	&__button-pause {
+		display: none;
+		width: 12.8rem;
+		height: 16.4rem;
+
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 1;
+
+		&.active {
+			display: block;
 		}
 	}
 }
