fix: project-detail + feat: burger menu + feat: file input

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -9,8 +9,26 @@
 				<a class="nav__link" href="#">about us</a>
 				<a class="nav__link" href="#">projects</a>
 				<a class="nav__link" href="#">contacts</a>
+				<a class="nav__link" href="#">service</a>
 			</nav>
 			<button class="header__btn" type="button">request a project</button>
+			<button class="header__burger burger-btn">
+				<span></span>
+				<span></span>
+				<span></span>
+			</button>
+			<div class="header__burger-menu burger-menu">
+				<div class="burger-menu__inner">
+					<nav class="burger-menu__nav nav">
+						<a class="nav__link" href="#">about us</a>
+						<a class="nav__link" href="#">projects</a>
+						<a class="nav__link" href="#">contacts</a>
+						<a class="nav__link" href="#">service</a>
+					</nav>
+					<button class="burger-menu__btn" type="button">request a project</button>
+					<div class="burger-menu__overlay burger-menu-overlay"></div>
+				</div>
+			</div>
 		</div>
 	</div>
 </header>
