--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -190,6 +190,12 @@
 main {
 	padding-top: 14.8rem;
 }
+body {
+	&.lock {
+		overflow: hidden;
+		touch-action: none;
+	}
+}
 
 @media (max-width: 48em) {
 	@keyframes btnDots {
