--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -7,7 +7,6 @@
 	transition:
 		background 0.5s linear,
 		padding 0.5s linear;
-	will-change: backdrop-filter;
 	&.scroll {
 		transition:
 			background 0.5s linear,
@@ -42,6 +41,11 @@
 				visibility: visible;
 			}
 		}
+		.header__burger {
+			span {
+				background-color: $black;
+			}
+		}
 	}
 	.black-logo {
 		opacity: 0;
@@ -57,6 +61,8 @@
 	}
 	// .header__logo
 	&__logo {
+		position: relative;
+		z-index: 2;
 		width: 15.0595rem;
 		height: 4.8rem;
 	}
@@ -88,6 +94,12 @@
 			z-index: 1;
 		}
 	}
+	&__burger {
+		display: none;
+	}
+	&__burger-menu {
+		display: none;
+	}
 }
 
 .nav {
@@ -111,7 +123,7 @@
 		z-index: 1000;
 		// .header__inner
 		&__inner {
-			align-items: flex-start;
+			align-items: center;
 			padding: 4rem 0;
 		}
 		// .header__logo
@@ -125,14 +137,131 @@
 		}
 		// .header__btn
 		&__btn {
-			font-size: 2.8rem;
-			letter-spacing: 0.112rem;
+			display: none;
+		}
+		&__burger {
+			position: relative;
+			z-index: 2;
+			display: flex;
+			justify-content: center;
+			flex-direction: column;
+			gap: 1rem;
+
+			span {
+				transition: transform 0.2s linear;
+				display: block;
+				width: 5rem;
+				height: 0.4rem;
+				background-color: $white;
+				border-radius: 5rem;
+			}
+
+			&.active {
+				span {
+					&:nth-child(1) {
+						transition: transform 0.2s linear;
+						transform-origin: center;
+						transform: translateY(0.7rem) rotate(45deg);
+					}
+					&:nth-child(2) {
+						display: none;
+					}
+					&:nth-child(3) {
+						transition: transform 0.2s linear;
+						transform-origin: center;
+						transform: translateY(-0.7rem) rotate(-45deg);
+					}
+				}
+			}
+		}
+		&__burger-menu {
+			display: block;
+			position: fixed;
+			overflow: hidden;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100vh;
+			z-index: 1;
+			will-change: transform;
+
+			transition: transform 0.7s ease-out;
+			transform: translateY(-100%);
+
+			&.active {
+				transition: transform 0.7s ease-out;
+				transform: translateY(0);
+			}
+		}
+	}
+
+	.burger-menu {
+		&__inner {
+			padding: 8rem 3.2rem;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			height: 100%;
+			width: 100%;
+
+			background-color: $bg;
+		}
+		&__nav {
+			position: relative;
+			z-index: 2;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-direction: column;
+			gap: 5rem;
+			color: $black;
+			margin: auto 0;
+
+			.nav__link {
+				font-size: 3rem;
+			}
+		}
+		&__btn {
+			position: relative;
+			z-index: 10;
+			color: $black;
+			text-align: center;
+			font-size: 3rem;
+			font-style: normal;
+			font-weight: 700;
+			line-height: normal;
+			letter-spacing: 0.12rem;
+			text-transform: uppercase;
 
 			&::after {
-				position: static;
-				margin-top: 1.6rem;
+				content: "";
+				display: block;
+				width: 100%;
 				height: 0.3rem;
+				background: $black;
+
+				position: absolute;
+				bottom: -1.2rem;
+				left: 0;
+				z-index: 1;
 			}
+		}
+		&__overlay {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			z-index: 1;
+
+			width: 42.6rem;
+			height: 42.6rem;
+			border-radius: 50%;
+			background-color: $lightGray;
+			box-shadow:
+				0 0 0 20.4rem $bg,
+				0 0 0 44.4rem $lightGray;
+
+			transform: translate(-50%, -54%);
 		}
 	}
 }
