--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,7 @@
 
 @import "./scss/pages/main";
 @import "./scss/pages/project-detail";
+@import "./scss/pages/404";
 @import "./scss/style";
 
 .mobile {
