--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,7 @@
 @import "./scss/pages/main";
 @import "./scss/pages/project-detail";
 @import "./scss/pages/404";
+@import "./scss/pages/about";
 @import "./scss/style";
 
 .mobile {
